[package]
name = "proxy-scraper-checker"
version = "0.1.3"
edition = "2021"
authors = ["Xewdy444 <xewdy@xewdy.systems>"]
license = "MIT"
description = "A command-line tool for scraping and checking HTTP and SOCKS5 proxies from the checkerproxy.net proxies archive"
readme = "README.md"
homepage = "https://github.com/Xewdy444/Proxy-Scraper-Checker"
repository = "https://github.com/Xewdy444/Proxy-Scraper-Checker"
keywords = ["proxy", "scraper", "checker", "http", "socks5"]
categories = ["command-line-utilities"]

[profile.release]
codegen-units = 1
strip = true
lto = "fat"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
humantime = "2.3.0"
indicatif = "0.18.3"
reqwest = { version = "0.12.26", features = ["socks"] }
rlimit = "0.10.2"
scraper = "0.25.0"
serde_json = "1.0.145"
tabled = "0.20.0"
tokio = { version = "1.48.0", features = ["full"] }
